2003-09-17  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-debug.gob:
	* src/devilspie-matcher-windowname.gob:
	Don't crash on a NULL properties. Thanks to Rob Mayoff
	<mayoff@dqd.com> for the patch.

	* src/config-parser.c:
	Don't crash on unknown properties, just tell the user. Far more
	sane. Thanks to Rob again.
	
	* configure.in:
	* NEWS:
	Version 0.3.1.

2003-08-14  Ross Burton  <ross@burtonini.com>

	* README:
	Update the documentation.

	* NEWS:
	* configure.in:
	Version 0.3.

	* debian/*
	Using CDBS now.

	* configure.in:
	Check for wnck_window_set_fullscreen, as its only in libwnck
	2.3.x.

	* src/devilspie-action-resize.gob:
	Wrap the fullscreen code in #if HAVE_FULLSCREEN. This hack will go
	once libwnck 2.4 is released.

2003-07-31  Ross Burton  <ross@burtonini.com>

	* README:
	Updated the readme, thanks to Gaetan de Menten.

2003-06-25  Ross Burton  <ross@burtonini.com>

	* devilspie.1: Fix a typo spotted by Gaetan de Menten
	<ged@bugfactory.org> .

2003-05-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Include the generated spec file in the
	build (noticed by Dag Wieers <dag@wieers.com>)

2003-05-06  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob: Add a "fullscreen" property,
	requires a really really new wnck.

2003-05-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* devilspie.spec.in: package locale files.

2003-05-01  Ross Burton  <ross@burtonini.com>

	* devilspie.spec.in: Added a RPM spec file, based on spec files by
	Michael Raab <mraab@macbyte.info> and Lars R. Damerow
	<lars@oddment.org>

	* Makefile.am: Include the spec file in the dist.

	* configure.in: Generate the spec file. Also comment out the GConf
	code for now.

	* debian/*: Updated

2002-12-29  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore: Added stamp-h1.
	* configure.in (ALL_LINGUAS): Added German (de).

2002-12-17  Ross Burton  <ross@burtonini.com>

	* configure.in: Find GConf.
