@@ -10,6 +10,7 @@
 #include "devilspie-action-setworkspace.h"
 #include "devilspie-action-resize.h"
 #include "devilspie-action-debug.h"
+#include "devilspie-action-setwintype.h"
 
 /* Equally foul */
 void flurb_init(void) {
@@ -21,6 +22,7 @@ void flurb_init(void) {
   devilspie_action_setworkspace_get_type();
   devilspie_action_resize_get_type();
   devilspie_action_debug_get_type();
+  devilspie_action_setwintype_get_type();
 }
 
 /**
